Fixed Overflow (scrollbar)

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ i {
     background-image: url(../img/mine.jpg);
     background-position: center;
     background-size: contain;
+    overflow-y: scroll;
 }
 
 .footer-icon i {
